Add ListGroup function with filter and cursor for console
